--- a/style.css
+++ b/style.css
@@ -1,1 +1,9 @@
+#profileCard {
+  width: 150px;
+  padding: ;
+  border: ________ solid black;
+  margin: ________;
+  background-color: ________;
+}
+
 
