--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 #profileCard {
   width: 150px;
-  padding: ;
-  border: ________ solid black;
+  padding: 10px ;
+  border: 2px solid black;
   margin: ________;
-  background-color: ________;
+  background-color: #ADD8E6;
 }
 
 
