--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   width: 150px;
   padding: 10px ;
   border: 2px solid black;
-  margin: ________;
+  margin: 10px;
   background-color: #ADD8E6;
 }
 
