--- a/style.css
+++ b/style.css
@@ -6,4 +6,16 @@
   background-color: #ADD8E6;
 }
 
+._________ {
+  font-size: ________;
+  font-weight: ________;
+  text-align: center;
+}
+
+._________ {
+  font-size: ________;
+  color: ________;
+  text-align: center;
+}
+
 
