--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@
   background-color: #ADD8E6;
 }
 
-._________ {
+.Alex{
   font-size: ________;
   font-weight: ________;
   text-align: center;
 }
 
-._________ {
+.Rod{
   font-size: ________;
   color: ________;
   text-align: center;
