--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@
 }
 
 .Alex{
-  font-size: ________;
+  font-size: 12px;
   font-weight: ________;
   text-align: center;
 }
 
 .Rod{
-  font-size: ________;
+  font-size: 12px;
   color: ________;
   text-align: center;
 }
